# nonebot-plugin-revGPTApi

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_revgptapi/: __init__.py  bot.py  config.py  msg_handle.py
nonebot_plugin_revgptapi/utils/: cons.py  utils.py
